change deploy cros and secruity settings